[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/lobby.gd" id="1_lobby"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lobby")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.15, 0.2, 1)

[node name="CenterContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -200.0
offset_right = 150.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Lobby"
horizontal_alignment = 1

[node name="Spacer" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="PlayersLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = "Players:"
horizontal_alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 120)

[node name="Spacer2" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="StatusLabel" type="Label" parent="CenterContainer"]
layout_mode = 2
text = ""
horizontal_alignment = 1
autowrap_mode = 2

[node name="Spacer3" type="Control" parent="CenterContainer"]
layout_mode = 2
custom_minimum_size = Vector2(0, 10)

[node name="BackButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "Back to Menu"
